--- a/config/s3dis/s3dis_swin3d_transformer.yaml
+++ b/config/s3dis/s3dis_swin3d_transformer.yaml
@@ -1,8 +1,8 @@
 DATA:
   data_name: s3dis
-  data_root: # Fill in the pre-processed data path (which contains the .npy files)
-  test_area: 5
-  classes: 13
+  data_root: "/root/autodl-tmp/data/data_s3dis_normal"
+  data_root_val: "/root/autodl-tmp/data/data_s3dis_normal"
+  classes: 3
   fea_dim: 6
   voxel_size: 0.04
   voxel_max: 80000
@@ -46,7 +46,7 @@ TRAIN:
   use_amp: True
   optimizer: AdamW 
   ignore_label: 255
-  train_gpu: [0, 1, 2, 3]
+  train_gpu: [0]
   workers: 16  # data loader workers
   batch_size: 8  # batch size for training
   batch_size_val: 4  # batch size for validation during training, memory and speed tradeoff
@@ -80,6 +80,6 @@ TEST:
   test_gpu: [0]
   test_workers: 4
   batch_size_test: 4
-  model_path: # Fill the path of the trained .pth file model
-  save_folder: # Fill the path to store the .npy files for each scene
+  model_path: runs/s3dis_swin3d_transformer/best.pth
+  save_folder: runs/s3dis_swin3d_transformer/results
   names_path: data/s3dis/s3dis_names.txt
