--- a/config/s3dis/s3dis_swin3d_transformer(copy).yaml
+++ b/config/s3dis/s3dis_swin3d_transformer(copy).yaml
@@ -1,6 +1,6 @@
 DATA:
   data_name: s3dis
-  data_root: # Fill in the pre-processed data path (which contains the .npy files)
+  data_root: /root/autodl-tmp/data/data_s3dis_normal
   test_area: 5
   classes: 13
   fea_dim: 6
