--- a/config/s3dis/s3dis_stratified_transformer.yaml
+++ b/config/s3dis/s3dis_stratified_transformer.yaml
@@ -4,6 +4,7 @@ DATA:
   data_root_val: "/root/autodl-tmp/data/data_s3dis_normal"
   classes: 3
   fea_dim: 6
+  in_channels: 6
   voxel_size: 0.04
   voxel_max: 80000
   loop: 6
@@ -27,7 +28,7 @@ TRAIN:
   num_heads: [3, 6, 12, 24] 
   up_k: 3
   drop_path_rate: 0.3
-  concat_xyz: True
+  concat_xyz: False
   grid_size: 0.04
   max_batch_points: 140000
   max_num_neighbors: 34 # For KPConv
