--- a/config/s3dis/s3dis_swin3d_transformer.yaml
+++ b/config/s3dis/s3dis_swin3d_transformer.yaml
@@ -8,7 +8,7 @@ DATA:
   voxel_size: 0.04
   voxel_max: 80000
   shuffle: True
-  loop: 30
+  loop: 2
 
 TRAIN:
   #arch
@@ -28,7 +28,7 @@ TRAIN:
   num_heads: [3, 6, 12, 24] 
   up_k: 3
   drop_path_rate: 0.3
-  concat_xyz: True
+  concat_xyz: False
   grid_size: 0.04
   max_batch_points: 640000
   max_num_neighbors: 34 # For KPConv
