--- a/config/scannetv2/scannetv2_stratified_transformer(copy).yaml
+++ b/config/scannetv2/scannetv2_stratified_transformer(copy).yaml
@@ -1,19 +1,15 @@
 DATA:
   data_name: scannetv2
-  data_root: "/root/autodl-tmp/data/data_s3dis_normal"
-  data_root_val: "/root/autodl-tmp/data/data_s3dis_normal"
-  classes: 3
+  data_root: # Fill in the pre-processed data path (which contains the 'train', 'val', 'test' directories)
+  classes: 20
   fea_dim: 6
-  in_channels: 6
-  voxel_size: 0.04
-  voxel_max: 80000
-  shuffle: True
-  loop: 2
-
+  voxel_size: 0.02 
+  voxel_max: 120000 
+  loop: 6 
 
 TRAIN:
   # arch
-  arch: swin3d_transformer
+  arch: stratified_transformer
   stem_transformer: False
   use_xyz: True
   sync_bn: True  # adopt sync_bn or not
@@ -21,6 +17,7 @@ TRAIN:
   rel_key: True
   rel_value: True
   quant_size: 0.005
+  downsample_scale: 4 
   num_layers: 5 
   patch_size: 1 
   window_size: 5 
@@ -29,9 +26,9 @@ TRAIN:
   num_heads: [3, 6, 12, 24, 24]
   up_k: 3
   drop_path_rate: 0.3
-  concat_xyz: False
+  concat_xyz: True
   grid_size: 0.02
-  max_batch_points: 640000
+  max_batch_points: 250000
   max_num_neighbors: 34 # For KPConv
   ratio: 0.25
   k: 16
@@ -48,7 +45,7 @@ TRAIN:
   optimizer: AdamW #SGD
   train_gpu: [0, 1, 2, 3] 
   workers: 16  # data loader workers
-  batch_size: 8  # batch size for training
+  batch_size: 8 # batch size for training
   batch_size_val: 4 # batch size for validation during training, memory and speed tradeoff
   base_lr: 0.006
   epochs: 100
@@ -63,7 +60,7 @@ TRAIN:
   manual_seed: 123
   print_freq: 1
   save_freq: 1
-  save_path: runs/sacnnetv2_swin3d_transformer
+  save_path: runs/sacnnetv2_stratified_transformer
   weight:  # path to initial weight (default: none)
   resume:  # path to latest checkpoint (default: none)
   evaluate: True  # evaluate on validation set, extra gpu memory needed and small batch_size_val is recommend
@@ -76,9 +73,11 @@ Distributed:
   rank: 0
 
 TEST:
-  split: test  # split in [train, val and test]
+  data_root_val: # Fill the path that contains the scenes of the validation set (e.g., "[YOUR PATH]/val")
+  split: val  # split in [train, val and test]
   test_gpu: [0]
   test_workers: 4
   batch_size_test: 4
-  model_path: runs/sacnnetv2_swin3d_transformer/model/model_last.pth
-  save_folder: runs/sacnnetv2_swin3d_transformer/results
+  model_path: # Fill the path of the trained .pth file model
+  save_folder: # Fill the path to store the .npy files for each scene
+  names_path: data/scannet/scannet_names.txt
