--- a/config/scannetv2/scannetv2_stratified_transformer.yaml
+++ b/config/scannetv2/scannetv2_stratified_transformer.yaml
@@ -46,8 +46,8 @@ TRAIN:
   warmup_ratio: 0.000001
   use_amp: True
   optimizer: AdamW #SGD
-  train_gpu: [0, 1, 2, 3] 
-  workers: 16  # data loader workers
+  train_gpu: [0]
+  workers: 8  # data loader workers
   batch_size: 3 # batch size for training
   batch_size_val: 1 # batch size for validation during training, memory and speed tradeoff
   base_lr: 0.006
