--- a/config/scannetv2/scannetv2_stratified_transformer.yaml
+++ b/config/scannetv2/scannetv2_stratified_transformer.yaml
@@ -21,12 +21,12 @@ TRAIN:
   rel_value: True
   quant_size: 0.005
   downsample_scale: 4 
-  num_layers: 5 
+  num_layers: 4
   patch_size: 1 
-  window_size: 5 
+  window_size: 4
   depths: [3,3,9,3,3] 
-  channels: [48, 96, 192, 384, 384] 
-  num_heads: [3, 6, 12, 24, 24]
+  channels: [48, 96, 192, 384]
+  num_heads: [3, 6, 12, 24]
   up_k: 3
   drop_path_rate: 0.3
   concat_xyz: True
