--- a/config/scannetv2/scannetv2_stratified_transformer.yaml
+++ b/config/scannetv2/scannetv2_stratified_transformer.yaml
@@ -13,7 +13,7 @@ DATA:
 TRAIN:
   # arch
   arch: stratified_transformer
-  stem_transformer: False
+  stem_transformer: True
   use_xyz: True
   sync_bn: True  # adopt sync_bn or not
   rel_query: True
