--- a/config/scannetv2/scannetv2_swin3d_transformer.yaml
+++ b/config/scannetv2/scannetv2_swin3d_transformer.yaml
@@ -10,9 +10,8 @@ DATA:
   shuffle: True
   loop: 2
 
-
 TRAIN:
-  # arch
+  #arch
   arch: swin3d_transformer
   stem_transformer: True
   use_xyz: True
@@ -20,17 +19,17 @@ TRAIN:
   rel_query: True
   rel_key: True
   rel_value: True
-  quant_size: 0.005
+  quant_size: 0.01
   num_layers: 4
-  patch_size: 1 
+  patch_size: 1
   window_size: 4
-  depths: [3,3,9,3,3] 
+  depths: [2, 2, 6, 2]
   channels: [48, 96, 192, 384]
   num_heads: [3, 6, 12, 24]
   up_k: 3
   drop_path_rate: 0.3
   concat_xyz: False
-  grid_size: 0.02
+  grid_size: 0.04
   max_batch_points: 640000
   max_num_neighbors: 34 # For KPConv
   ratio: 0.25
@@ -38,28 +37,29 @@ TRAIN:
 
   # training
   aug: True
-  transformer_lr_scale: 0.1 
-  scheduler_update: step 
-  scheduler: MultiStepWithWarmup 
+  transformer_lr_scale: 0.1
+  jitter_sigma: 0.005
+  jitter_clip: 0.02
+  scheduler_update: epoch
+  scheduler: MultiStep
   warmup: linear
-  warmup_iters: 3000
+  warmup_iters: 1500
   warmup_ratio: 0.000001
   use_amp: True
-  optimizer: AdamW #SGD
+  optimizer: AdamW
+  ignore_label: 255
   train_gpu: [0]
   workers: 8  # data loader workers
   batch_size: 3  # batch size for training
-  batch_size_val: 1 # batch size for validation during training, memory and speed tradeoff
+  batch_size_val: 1  # batch size for validation during training, memory and speed tradeoff
   base_lr: 0.006
   epochs: 100
   start_epoch: 0
   step_epoch: 30
   multiplier: 0.1
   momentum: 0.9
-  weight_decay: 0.05
+  weight_decay: 0.01
   drop_rate: 0.5
-
-  ignore_label: -100 #255
   manual_seed: 123
   print_freq: 1
   save_freq: 1
@@ -79,6 +79,6 @@ TEST:
   split: test  # split in [train, val and test]
   test_gpu: [0]
   test_workers: 4
-  batch_size_test: 4
+  batch_size_test: 1
   model_path: runs/sacnnetv2_swin3d_transformer/model/model_last.pth
   save_folder: runs/sacnnetv2_swin3d_transformer/results
